--- a/INSTALL
+++ b/INSTALL
@@ -1,44 +1,45 @@
-                                       LOOS COMPATIBILITY TABLE
-                                       ------------------------
+             LOOS COMPATIBILITY TABLE
+             ------------------------
+
+*** Symbols ***
+
++ = Fully supported (dependencies easily available via package manager)
+! = Supported with reservation (may require manual installation)
+~ = Tested, but not directly supported (i.e. you're own your own for installing packages)
+- = Not supported
+
+C = Requires manual install of SCons
+S = Requires manual install of Swig
+
+D = Deprecated (we are no longer testing these configurations, however,
+    they may still work)
+
+* = See OS-specific installation section
+
+
 
 --------------------------------------------------                             
-|    OS             |   LOOS    | PyLOOS | Notes |     ************** Symbols *****************
+|    OS             |   LOOS    | PyLOOS | Notes |
 |-------------------|-----------|--------|--------                             
-| Fedora 12         |     +     |   !    | DS    |     + = Supported (dependencies easily
-| Fedora 13         |     +     |   !    | DS    |         available via package manager)
-| Fedora 14         |     +     |   +    | D     |                             
-| Fedora 15         |     +     |   +    | D     |     ! = Supported with reservations
-| Fedora 16         |     +     |   +    | D     |         (may require manual installations)
 | Fedora 17         |     +     |   +    |       |    
-| Fedora 18         |     +     |   +    |       |     - = Unsupported
+| Fedora 18         |     +     |   +    |       |
 | Fedora 19         |     +     |   +    |       |                             
 | Fedora 20         |     +     |   +    |       |
 | Fedora 21         |     +     |   +    |       |
 | Fedora 22         |     +     |   +    |       |
-|-------------------|-----------|--------|-------|     B = Requires manual install of Boost
-| Ubuntu 8.04 LTS   |     !     |   !    | DBCS  |                             
-| Ubuntu 10.04 LTS  |     +     |   !    | DCS   |     C = Requires manual install of SCons
-| Ubuntu 11.10      |     +     |   !    | DS    |     
-| Ubuntu 12.04 LTS  |     +     |   +    |       |     S = Requires manual install of Swig
-| Ubuntu 12.10      |     +     |   +    | D     |     
-| Ubuntu 13.04      |     +     |   +    | D     |
+|-------------------|-----------|--------|-------|
+| Ubuntu 12.04 LTS  |     +     |   +    |       | 
 | Ubuntu 14.04 LTS  |     +     |   +    |       |
 | Ubuntu 15.04      |     +     |   +    |       |
-|-------------------|-----------|--------|-------|     D = Deprecated platform        
-| Debian 5          |     !     |   -    | DB    |         We are no longer testing these
-| Debian 6          |     +     |   !    | S     |         configurations, however, they may
-| Debian 7.7        |     +     |   +    |       |         still work...
-| Debian 8          |     +     |   +    |       |
-|-------------------|-----------|--------|-------|                             
-| CentOS 5.9        |     !     |   !    | DBCS  |     T = Tested, but not directly supported
-| CentOS 6.4        |     +     |   !    | CS    |         (i.e. you're own your own for
-| CentOS 7          |     +     |   !    | C     |         installing required packages)
 |-------------------|-----------|--------|-------|
-| OpenSUSE 11.4     |     !     |   -    | DC    |                             
+| Debian 7.7        |     +     |   +    |       |
+| Debian 8.1        |     +     |   +    |       |
+|-------------------|-----------|--------|-------|                             
+| CentOS 6.7        |     +     |   !    | CS    | 
+| CentOS 7          |     +     |   !    | C     | 
+|-------------------|-----------|--------|-------|
 | OpenSUSE 12       |     !     |   +    | C     |                             
 | OpenSUSE 13       |     +     |   +    |       |
-|-------------------|-----------|--------|-------|                             
-| FreeBSD 8         |     +     |   -    | D     |                             
 |-------------------|-----------|--------|-------|                             
 | Manjaro 0.8       |     +     |   +    | T     |                             
 |-------------------|-----------|--------|-------|                             
@@ -46,15 +47,10 @@
 |-------------------|-----------|--------|-------|                             
 | Slackware 14.1    |     +     |   +    | T     |                             
 |-------------------|-----------|--------|-------|                             
-| Windows XP        |     +     |   -    | D     |                             
-|  +Cygwin 1.7.7    |           |        |       |                             
 | Windows 7 64-bit  |     +     |   -    | D     |                             
 |  +Cygwin 1.7.15-1 |           |        |       |                             
 |-------------------|-----------|--------|-------|                             
-| MacOS 10.6        |     +     |   !    | D     |                             
-| MacOS 10.7        |     +     |   !    | D     |                             
-| MacOS 10.8        |     +     |   !    | D     |                             
-| MacOS 10.9        |     +     |   !    | BCS   |                             
+| MacOS 10.9        |     +     |   !    | *     |                             
 |-------------------|-----------|--------|-------|                             
 
 
@@ -107,11 +103,11 @@ To use LOOS, your environment must be first setup:
 
 			     = PyLOOS =
 
-The Python interface to LOOS is currently a beta-release.  It will be
-included in the build if you have a recent SWIG (version 2.0 or
-better) in your standard path.  Not all operating systems and versions
-are supported.  If you need to disable the automatic building of
-PyLOOS, use the pyloos flag to scons:
+The Python interface to LOOS will be included in the build if you have
+a recent SWIG (version 2.0 or better) in your standard path as well as
+NumPy installed.  Not all operating systems and versions are
+supported.  If you need to disable the automatic building of PyLOOS,
+use the pyloos flag to scons:
 
 	scons pyloos=0
 
@@ -182,123 +178,43 @@ LOOS has been tested on Fedora (64-bit).  We assume you already have
 the basic compiler tools installed (i.e. g++).  You will need to
 install scons, boost, and atlas:
 
-sudo yum install scons boost-devel atlas-devel
-
-[optional]
-For Amber NetCDF support, also install the netcdf development package:
-
-sudo yum install netcdf-devel
+sudo dnf install scons boost-devel atlas-devel netcdf-devel python-devel swig numpy
 
 
-* PyLOOS *
-
-Fedora 14-22: Yum install python-devel and swig
-
-Fedora 13: Yum install pcre-devel and python-devel, then download and install
-  swig-2.0.4 (or later).
-
-Fedora 12: Install pcre-devel and download and build the latest swig
-  (2.0.4 or later).
-
-
-
-
-=======================================================================
 
 
 
 			------= CentOS =------
 
 LOOS has been tested with CentOS (64 bit).  Follow the instructions
-for Fedora, however there is no scons package available via yum.
-Instead, download and install any version of scons more recent than
-1.0.
+for Fedora (using yum instead of dnf).  However there is no scons
+package available via yum.  Instead, download and install any version
+of scons more recent than 1.0.
 
 
 * PyLOOS *
 
-CentOS 5, 6: Yum install python-devel and pcre-devel, then download
-  and install the latest swig.
+CentOS 6: Yum install python-devel and pcre-devel, then download
+  and install the latest swig.  The version of swig available through
+  the package manager is too old.
 
-=======================================================================
+
 
 
 			------= Ubuntu =------
 
-LOOS has been tested on Ubuntu 8-15.  The following instructions have
-been used to install LOOS on a fresh 64-bit 14.04 installation.  Use
-the Ubuntu software center (or apt-get) to install the following
-packages:
-	g++ (GNU C++ compiler)
-	scons (replacement for make)
-	libboost-all-dev [or libboost-all-devel] (Boost C++ Libraries development files (ALL))
-	libatlas-dev (Automatically Tunes Linear Algebra Software, C Header Files)
-	libatlas-base-dev (Automatically Tuned Linear Algebra Software)
-	libnetcdf-dev [optional] (Development kit for Netcdf)
-
-* Ubuntu 12.10 *
-
-On the test installation, there was a warning on installing boost.  It
-was necessary to click on "Repair" twice before boost was successfully
-installed.
-
-* Ubuntu 10.04 LTS *
-
-Ubuntu 10.04 LTS uses libboost1.40-all-dev instead of
-libboost-all-devel for a package name.  The version of scons available
-through the package manager is too old.  Download and install a recent
-scons (2.0 or better)
-
-* Ubuntu 8.04 LTS *
-
-Do not install scons using the package manager--the available version
-is incompatable with LOOS.  Instead, download any version >= 1.0 and
-install that.  Also, there is no boost-all package, so you must
-install the components separately: libboost-dev, libboost-regex-dev,
-and libboost-program-options-dev
+sudo apt-get install g++ scons libboost-all-dev libatlas-base-dev libatlas-dev \
+     libnetcdf-dev swig python-dev python-numpy
 
 
-
-
-* PyLOOS *
-
-Ubuntu 12.04 LTS & 12.10: Install swig using software center or apt-get.
-
-Ubuntu 11.10 & 10.04 LTS: PyLOOS requires a very recent version of
-  SWIG.  While it may appear that the swig 2.0.4 is available through
-  the synaptics package manager, it is really 1.3.40 and will not work
-  with PyLOOS.  First install the libpcre-dev, then download, build,
-  and install the latest version of swig.
-
-
-Ubuntu 8.04 LTS: Install python-dev and follow the instructions above.
-
-=======================================================================
 
 
 			------= Debian =------
 
-Using the synaptic manager (or apt-get), install the following packages:
-      libboost-all-dev [or libboost-dev for some older debians]
-      scons
-      libatlas-base-dev
-      libatlas-headers [May be required for Debian 5]
-      libnetcdf-dev [optional]
+sudo apt-get install g++ scons libboost-all-dev libatlas-base-dev libatlas-dev \
+     libnetcdf-dev swig python-dev python-numpy
 
-Debian 5: LOOS requires boost 1.36 or higher, but the default version
-          for Debian 5 is 1.34.  You will need to manuall download and
-	  install a recent version of BOOST prior to building LOOS.
-	  A custom.py file will also be necessary to point the build
-	  to the alternate version of BOOST.
 
-* PyLOOS *
-
-Debian 5: NOT SUPPORTED
-Debian 6: Install libpcre-dev and python-dev, then *download* and
-  install the latest swig.
-Debian 7: Install python-dev, and swig
-
-=======================================================================
 
 		       ------= openSUSE =------
 
@@ -309,28 +225,18 @@ be ignored by the LOOS build.
 
 Using zypper (or your favorite package manager), install the following:
 
-   zypper install scons boost-devel lapack-devel blas-devel
+   zypper install scons boost-devel lapack-devel blas-devel python-devel swig libnetcdf-devel
 
 You should get the blas as a dependency for lapack.  You may also have lapack3
 installed by default, however we've found that lapack must also be installed
 in order to build LOOS.
 
-* OpenSUSE 11 & 12 *
+* OpenSUSE 12 *
 
 The package-manager installed scons is too old.  Download and install SCons
 2.0 or better.
 
-[Optional]
-For Amber NetCDF trajectory support, install the netcdf development package,
-   zypper install libnetcdf-devel
 
-
-* PYLOOS *
-
-OpenSUSE 12.1: zypper install python-devel swig
-OpenSUSE 11.4: NOT SUPPORTED
-
-=======================================================================
 
 			-----= MACOS X =-----
 
@@ -380,8 +286,6 @@ fact using only the BOOST install and libraries you intend (or removed
 the excess versions)
 
 
-=======================================================================
-
 
 			 -----= CYGWIN =-----
 			    (UNSUPPORTED)
@@ -410,21 +314,6 @@ libnetcdf-devel library using the cygwin setup.exe installer.
 
 Cygwin is NOT SUPPORTED
 
-=======================================================================
-
-
-			-----= FreeBSD =-----
-			    (UNSUPPORTED)
-
-LOOS has been tested with FreeBSD 8.  You will need to install the gcc
-suite, atlas, scons, and boost by whatever means you prefer (note:
-LOOS was tested using the versions installed via ports).
-
-* PyLOOS *
-
-FreeBSD is NOT SUPPORTED
-
-=======================================================================
 
 			-----= Manjaro =-----
 			    (UNSUPPORTED)
@@ -433,7 +322,6 @@ LOOS has been tested with Manjaro 0.8.10.
 Make sure scons, boost, lapack, python, and swig are installed.  Also
 install NetCDF, if you want NetCDF support.  LOOS and PyLOOS should build.
 
-========================================================================
 
 			-----= Slackware =-----
 			    (UNSUPPORTED)
