--- a/README
+++ b/README
@@ -8,6 +8,38 @@
 Our email address has changed.  Please use <loos.maintainer@gmail.com>
 to contact us regarding LOOS.
 
+
+   * RELEASE 2.3.0 *
+
+This release of LOOS comes with two major changes, all related to
+PyLOOS.  First, NumPy is now required for building PyLOOS.  For Linux
+users, this will just be a package install.  For Mac users, a little
+more work will be required.  See the INSTALL file for more details.
+The second change is a reorganization of PyLOOS and new trajectory
+classes.  All Python-based components of PyLOOS are now in the
+loos.pyloos module.  The new trajectory classes are easier to use than
+the old PyTraj classes.  In addition, you can combine multiple
+trajectories into a large "virtual" trajectory.  The frames of the
+composite trajectory can be iteratively aligned (a la aligner) or
+aligned to a reference structure.  See the documentation for
+loos.pyloos for more details.
+
+Additional PyLOOS changes include bug fixes for the iterativeAlignment
+function.  The splitting functions in AtomicGroup now return a Python
+list rather than an AtomicGroupVector.  Coordinates can be extracted
+from an AtomicGroup or a Trajectory as a NumPy matrix.  An SVD/PCA
+function has also been added to PyLOOS.
+
+All old PyLOOS functions that begin or end with Py are now deprecated
+and will be removed in the next release.  These include PyTraj,
+PyAlignedTraj, and iterativeAlignmentPy.
+
+In LOOS, an "index" keyword has been added to pick atoms based on
+their position in a model (rather than atom id).  A k-means clustering
+program (using PyLOOS) has been added.  Finally, a number of
+minor bug fixes are included.
+
+
    * RELEASE 2.2.5 *
 
 This release of LOOS includes several important bug fixes and new
