--- a/loos.dox
+++ b/loos.dox
@@ -13,16 +13,17 @@ School of Medicine & Dentistry, University of Rochester\n
 
 <hr>
 <h2>Important News</h2>
-Our email address has changed.  Please use loos.maintainer@gmail.com to contact us regarding LOOS.  We now have two mailing lists available,
-   - <a href="https://lists.sourceforge.net/lists/listinfo/loos-users">LOOS Users</a>
-   - <a href="https://lists.sourceforge.net/lists/listinfo/loos-devel">LOOS Developers</a>
+Our email address has changed.  Please use loos.maintainer@gmail.com to contact us regarding LOOS.  We now have three mailing lists available:
+   - <a href="https://lists.sourceforge.net/lists/listinfo/loos-users">LOOS Users</a>: for discussion of issues related to installing or using LOOS
+   - <a href="https://lists.sourceforge.net/lists/listinfo/loos-devel">LOOS Developers</a>: for discussion of developing new tools using LOOS
+   - <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">LOOS Announcements</a>: a low-volume list primarily used to announce new releases and explain changes
 
 
 <hr>
 
 <h2>Quick Links</h2>
       -  <a href="http://sourceforge.net/projects/loos">Download LOOS at http://sourceforge.net/projects/loos</a>
-      -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the mailing list</a>
+      -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the announcements mailing list</a>
       -  <a href="http://sourceforge.net/projects/loos/files/loos%20material/loos_talk_2013_2.pdf/download">Download a tutorial (pdf) on using LOOS</a>
       -  Ask the developers a question at loos.maintainer@gmail.com
       - \subpage building "Building LOOS"
@@ -74,7 +75,7 @@ http://loos.sourceforge.net</A>.
 We strongly suggest that you also subscribe to the <a
 href="https://lists.sourceforge.net/lists/listinfo/loos-announce">loos-announce</a>
 mailing list; it's a low-volume list used primarily to announce new releases.
-Since most releases contain bug-fixes, we always recommend using the most
+Since most releases contain bug fixes, we always recommend using the most
 recent version of LOOS.
 
 \section Applications
@@ -107,7 +108,7 @@ their centroid or moments of inertia).
 
 \section Bugs
 There are none...only features.  So don't worry about them!
-Email us directly (loos.maintainer [AT] gmail.com) if you find a bug^H^H^H unintended feature.
+Either mail us directly (loos.maintainer [AT] gmail.com) or poster to the <a href="https://lists.sourceforge.net/lists/listinfo/loos-users">loos-users mailing list</a> if you find a bug^H^H^H unintended feature.  Note: your post will be delayed if you try to post without first signing up for the mailing list.
 
 \section future Future Plans
 
