--- a/INSTALL
+++ b/INSTALL
@@ -227,7 +227,7 @@ be ignored by the LOOS build.
 Using zypper (or your favorite package manager), install the following:
 
 sudo zypper install gcc-c++ scons boost-devel lapack-devel blas-devel swig \
-     netcdf-devel python-numpy
+     netcdf-devel python-numpy python-numpy-devel
 
 You should get the blas as a dependency for lapack.  You may also have lapack3
 installed by default, however we've found that lapack must also be installed
