--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-10-23    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug affecting recent versions of Linux and CHARMM CRD files.
+
 2015-10-12    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Reorganized superposition and iterative alignment code into
