--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2015-10-23    <tromo@hill.urmc-sh.rochester.edu>
 
-	* Fixed bug affecting recent versions of Linux and CHARMM CRD files.
+	* Fixed bug affecting reading Charmm CRD files
 
 2015-10-12    <tromo@hill.urmc-sh.rochester.edu>
 
