--- a/INSTALL
+++ b/INSTALL
@@ -32,6 +32,7 @@ D = Deprecated (we are no longer testing these configurations, however,
 | Ubuntu 12.04 LTS  |     +     |   +    |       | 
 | Ubuntu 14.04 LTS  |     +     |   +    |       |
 | Ubuntu 15.04      |     +     |   +    |       |
+| Ubuntu 15.10      |     +     |   +    |       |
 |-------------------|-----------|--------|-------|
 | Debian 7.8        |     +     |   +    |       |
 | Debian 8.1        |     +     |   +    |       |
