--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-11-09    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug in periodicity handling in AtomicGroup where periodicity
+	could appear set but with default values (caused by copying in a box from
+	a group without periodicity).
+	* Added AtomicGroup::centrifyByMolecule() and AtomicGroup::centrifyByResidue() to
+	replace an AtomicGroup with the center of masses of molecule/residues.
+	
+
 2015-10-23    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug affecting reading Charmm CRD files
