--- a/README
+++ b/README
@@ -12,7 +12,7 @@ to contact us regarding LOOS.
    * RELEASE 2.3.0 *
 
 This release of LOOS comes with two major changes, all related to
-PyLOOS.  First, NumPy is now required for building PyLOOS.  For Linux
+PyLOOS.  First, NUMPY IS NOW REQUIRED FOR BUILDING PYLOOS.  For Linux
 users, this will just be a package install.  For Mac users, a little
 more work will be required.  See the INSTALL file for more details.
 The second change is a reorganization of PyLOOS and new trajectory
@@ -22,7 +22,7 @@ the old PyTraj classes.  In addition, you can combine multiple
 trajectories into a large "virtual" trajectory.  The frames of the
 composite trajectory can be iteratively aligned (a la aligner) or
 aligned to a reference structure.  See the documentation for
-loos.pyloos for more details.
+loos.pyloos (under Classes/Class List) for more details.
 
 Additional PyLOOS changes include bug fixes for the iterativeAlignment
 function.  The splitting functions in AtomicGroup now return a Python
