--- a/ChangeLog
+++ b/ChangeLog
@@ -42,7 +42,9 @@
 2015-08-27    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Added k-means clustering PyLOOS program (cluster-structures.py)
+	* Added AtomicGroup::getCoords() and AtomicGroup::setCoords() for numpy
 
+	
 2015-07-23    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Changed trajinfo to handle read errors and only use first set of valid frames
